# skills

./: .coderabbit.yaml  .editorconfig  .gitignore  .markdownlint.jsonc  .mcp.json  .pre-commit-config.yaml  .release-please-config.json  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  package.json  pyproject.toml  renovate.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: release-readiness-reviewer.md  skill-consistency-enforcer.md
.claude/rules/: commit-gate-integrity.md  commit-types.md  github-actions-security.md  skill-format.md  skill-lifecycle.md  skill-official-best-practices.md  skill-style.md  use-context-mode.md  use-uv-runner.md  vendored-skills.md  write-surgical-code.md
.claude/skills/: .graphifyignore  README.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: pr-title.yml  release-please.yml  validate-skills.yml
docs/audit/: arch-findings.md  claude-rules-auditor-findings.md  doc-findings.md  nitpicker-findings.md
docs/lessons/: MISSION.md  RESOURCES.md
docs/plans/: 2026-07-10-findings-store-ledger.md
schemas/: marketplace.schema.json  plugin.schema.json
scripts/: bump-version.py  check-stdlib-only.py  check-version-sync.py  common.py  list-skills.py  validate-rules.py  validate-skill.py
scripts/hooks/: _hooklib.py  check-version-sync-hook.py  deny-agents-path-hook.py  post-bash-revalidate.py  ruff-hook.py  stop-reminder.py  validate-audit-findings-hook.py  validate-json-hook.py  validate-rules-hook.py  validate-skill-hook.py
skills/a11y-auditor/: README.md  SKILL.md
skills/adversarial-reviewer/: README.md  SKILL.md
skills/api-contract-auditor/: README.md  SKILL.md
skills/arch-auditor/: README.md  SKILL.md
skills/arch-detector/: README.md  SKILL.md
skills/ci-auditor/: README.md  SKILL.md
skills/claude-rules-auditor/: README.md  SKILL.md  check-rules-anatomy.py
skills/commit-auditor/: README.md  SKILL.md
skills/complexity-hunter/: README.md  SKILL.md
skills/concurrency-auditor/: README.md  SKILL.md
skills/config-auditor/: README.md  SKILL.md
skills/cr-implementer/: README.md  SKILL.md  fetch-pr-comments.py
skills/data-privacy-auditor/: README.md  SKILL.md
skills/dep-auditor/: README.md  SKILL.md
skills/doc-auditor/: README.md  SKILL.md
skills/hooks-enforcer/: README.md  SKILL.md
skills/i18n-auditor/: README.md  SKILL.md
skills/loophole-hunter/: README.md  SKILL.md
skills/migration-auditor/: README.md  SKILL.md
skills/nitpicker/: README.md  SKILL.md  check-audit-consistency.py
skills/observability-auditor/: README.md  SKILL.md
skills/perf-auditor/: README.md  SKILL.md
skills/pr-reviewer/: README.md  SKILL.md
skills/resource-leak-auditor/: README.md  SKILL.md
skills/security-auditor/: README.md  SKILL.md  process-sarif.py
skills/silent-failure-hunter/: README.md  SKILL.md
skills/test-auditor/: README.md  SKILL.md
tests/: conftest.py  test_bump_version.py  test_check_audit_consistency.py  test_check_rules_anatomy.py  test_check_stdlib_only.py  test_check_version_sync.py  test_common.py  test_fetch_pr_comments.py  test_findings.py  test_hooks.py  test_list_skills.py  test_mcp_server.py  test_process_sarif.py  test_settings.py  test_skill_catalog.py  test_validate_audit_findings_hook.py  test_validate_rules.py  test_validate_skill.py
(+75 files in other folders)
