[project]
name = "ivuorinen-skills"
version = "1.7.2"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.coverage.run]
include = [
    "skills/cr-implementer/fetch-pr-comments.py",
    "skills/nitpicker/check-audit-consistency.py",
    "skills/claude-rules-auditor/check-rules-anatomy.py",
    "skills/security-auditor/process-sarif.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]
ignore = ["SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
