[project]
name = "ivuorinen-skills"
version = "2.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.coverage.run]
include = [
  "skills/nitpicker/scripts/findings.py",
  "skills/nitpicker/scripts/fetch-pr-comments.py",
  "skills/nitpicker/scripts/check-rules-anatomy.py",
  "skills/nitpicker/scripts/process-sarif.py",
  "scripts/*.py",
  "scripts/hooks/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]
ignore = ["SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
